# BetterMediaInfo

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  build.rs  development.md  index.html  package.json  pnpm-lock.yaml  postcss.config.js  svelte.config.js  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.js
.github/workflows/: linux_build.yml  macos_build.yml  windows_build.yml
.serena/: project.yml
docs/: development.md  installation.md  release_notes.md  screenshots.md  todos.md
scripts/ts/: change-version.ts  deno.json  patch-mediainfolib.ts
src/: App.tsx  app.html  bindings.rs  config.rs  main.rs  main.tsx  media_info.rs  streams.rs
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  extract.json  ffmpeg-tools.json  merge.json
src-tauri/icons/: icon.icns
src-tauri/patches/: copy_dlls.cjs  tauri.conf.json.patch
src-tauri/scripts/: copy_dlls.cjs  patch_tauri_conf.cjs
src-tauri/src/: batchmkvextract.rs  bd.rs  bdmaster.rs  bindings.rs  config.rs  constants.rs  context_menu.rs  controller.rs  ffmpeg.rs  lib.rs  main.rs  media_info.rs  mkvtoolnix.rs  mpchc.rs  protocol.rs  streams.rs  taskbar.rs  window.rs
src/components/: About.tsx  Config.tsx  Details.tsx  ExportDialog.tsx  Extract.tsx  FfmpegTools.tsx  Footer.tsx  Layout.tsx  List.tsx  MainContent.tsx  Merge.tsx  NotificationSnackbar.tsx  Toolbar.tsx
src/i18n/: index.ts
src/i18n/locales/: de.json  en-US.json  es.json  fr.json  it.json  ja.json  zh-CN.json  zh-HK.json  zh-TW.json
src/lib/: cardTables.ts  constants.ts  dialog.ts  export.ts  exportHtml.ts  exportMarkdown.ts  exportPng.ts  exportText.ts  extract.ts  ffmpegTools.ts  format.ts  fs.ts  index.ts  merge.ts  mkvLanguages.ts  protocol.ts  service.ts  store.ts  store.tsx  types.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte  about.svelte  config.svelte  details.svelte  footer.svelte  list.svelte  settings.svelte  toolbar.svelte
static/css/: material-symbols-outlined.css
ui/: main_window.slint
