[package]
name = "bettermi"
version = "0.1.0"
authors = ["Sam Cao <sjtucaocao@gmail.com>"]
edition = "2021"
build = "build.rs"

[dependencies]
anyhow = "1.0.86"
env_logger = "0.11.4"
log = "0.4.22"
once_cell = "1.19.0"
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.120"
slint = "1.7.1"

[build-dependencies]
slint-build = "1.7.1"
