[package]
name = "BetterMediaInfo"
version = "0.6.0"
description = "Betterh MediaInfo is a better GUI for MediaInfo"
authors = ["Sam Cao"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bettermi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
# https://crates.io/crates/tauri-build
tauri-build = { version = "2.0.3", features = [] }

[dependencies]
# https://crates.io/crates/tauri
tauri = { version = "2.1.1", features = [] }
# https://crates.io/crates/tauri-plugin-clipboard-manager
tauri-plugin-clipboard-manager = "2.0.2"
# https://crates.io/crates/tauri-plugin-dialog
tauri-plugin-dialog = "2.0.3"
# https://crates.io/crates/tauri-plugin-shell
tauri-plugin-shell = "2.0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4.22"
anyhow = "1.0.86"
once_cell = "1.19.0"
env_logger = "0.11.5"
widestring = "1.1.0"
encoding = "0.2.33"

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
# https://crates.io/crates/tauri-plugin-cli
tauri-plugin-cli = "2.0.1"
