[package]
name = "BetterMediaInfo"
version = "0.9.0"
description = "BetterMediaInfo is a better GUI for MediaInfo"
authors = ["Sam Cao"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "bettermi_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
# https://crates.io/crates/tauri-build
tauri-build = { version = "2.5", features = [] }

[dependencies]
# https://crates.io/crates/tauri
tauri = { version = "2.9", features = [] }
# https://crates.io/crates/tauri-plugin-clipboard-manager
tauri-plugin-clipboard-manager = "2.3"
# https://crates.io/crates/tauri-plugin-dialog
tauri-plugin-dialog = "2.4"
# https://crates.io/crates/tauri-plugin-shell
tauri-plugin-shell = "2.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4.29"
anyhow = "1.0.102"
once_cell = "1.21.4"
env_logger = "0.11.10"
widestring = "1.2.1"
encoding = "0.2.33"
tokio = { version = "1", features = ["rt-multi-thread"] }
ureq = { version = "2", features = ["json"] }
sysinfo = { version = "0.32", default-features = false, features = ["system"] }

[target.'cfg(target_os = "windows")'.dependencies]
winreg = "0.56"
windows = { version = "0.61", features = ["Win32_Foundation", "Win32_System_Com", "Win32_UI_Shell"] }
